# Backend

./: Cargo.toml  README.md  README_ZH.md  application.json5  build.rs  config.yml  未命名绘图.drawio
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  log.rs  mod.rs
src/controller/: img_verify_controller.rs  mod.rs  proxy_controller.rs  shop_proxy_controller.rs  sys_auth_controller.rs  sys_dict_controller.rs  sys_res_controller.rs  sys_role_controller.rs  sys_user_controller.rs
src/domain/: mod.rs
src/domain/domain/: mod.rs  tables.rs
src/domain/dto/: auth.rs  dict.rs  mod.rs  permission.rs  res.rs  role.rs  sign_in.rs  user.rs
src/domain/mapper/: mod.rs  sys_dict.rs  sys_permission.rs  sys_res.rs  sys_role.rs  sys_role_permission.rs  sys_role_res.rs  sys_trash.rs  sys_user.rs  sys_user_role.rs
src/domain/table/: enums.rs  mod.rs  tables.rs
src/domain/vo/: dict.rs  jwt.rs  mod.rs  res.rs  role.rs  sign_in.rs  user.rs
src/middleware/: auth.rs  auth_actix.rs  auth_axum.rs  mod.rs
src/service/: cache_service.rs  mem_service.rs  mod.rs  redis_service.rs  sys_auth_service.rs  sys_dict_service.rs  sys_res_service.rs  sys_role_res_service.rs  sys_role_service.rs  sys_sms_service.rs  sys_trash_service.rs  sys_user_role_service.rs  sys_user_service.rs
src/util/: mod.rs  password_encoder.rs  string.rs
