[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#rbatis orm dependency
rbson = "2.0"
tokio = { version = "1", features = ["full"] }
rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
#web server
actix-web = {version="4.0", default-features = false, features = ["macros"]}

#static
lazy_static = "1.4.0"

#async trait
async-trait = "0.1"
