[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#rbatis orm dependency
rbson = "2.0"
tokio = { version = "1", features = ["full"] }
rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
#web server
actix-web = {version="4.0", default-features = false, features = ["macros"]}

#static
lazy_static = "1.4.0"

#async trait
async-trait = "0.1"


#serde and json 引入解析json和yml的工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

#log 打印日志的工具
log = "0.4"
fast_log = { version = "1.5", features = ["lz4", "zip", "gzip"] }

# 加密库
md5 = "0.7.0"

#captcha 验证码库
captcha = "0.0.8"