[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# rbatis orm dependency
# rbatis orm dep must use async-std(Because actix-web relies on tokio0.2) now(deprecated)
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["macros"] }
# 3.1 depreciate
# rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
# rbson = "2.0"
# very important crate that could influence the macro call.
rbs = { version = "4.5" }
rbatis = { version = "4", features = ["debug_mode"] }
rbdc-sqlite = { version = "4.5" }
# rbdc-mysql = { version = "0.1" }

# web server
# actix-web = { version = "4.0", default-features = false, features = ["macros"] }

axum = {version = "0.7.4",features = ["macros"]}

# static 
# change to once_cell
# lazy_static = "1.4.0"
once_cell = "1.9"
# 封装互斥锁
# 第一次用在 service::mem_service
parking_lot = "0.12.1"

# 封装异步 trait, 第一次用在 service::cache_service;
futures-util = "0.3.21"

# redis 用于缓存服务
redis = { version = "0.21", features = ["tokio-comp"] }

# async trait
async-trait = "0.1"


# serde and json 引入解析json和yml的工具
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# log 打印日志的工具
log = "0.4"
fast_log = { version = "1.5", features = ["lz4", "zip", "gzip"] }

# 加密库
md5 = "0.7"

#captcha 验证码库
captcha = "0.0.9"

# jwt 工具库
jsonwebtoken = "9.2"
json5 = "0.4"

# used for build dependency
[build-dependencies]
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
